src/objects/Benfit_Request_Form__c.object
<CustomObject>
    <description>New object for AIA - This object stores the information that is needed for a quote</description>
    <fields>
        <fullName>ARC_Approval_Required__c</fullName>
        <formula>(Count_of_CDH_Products__c &gt;0 || Count_of_Custom_Products__c &gt; 0 || EGWP__c = true || FlexLink__c = true) 

&amp;&amp; 

(((MHP_Required__c = &quot;Yes&quot; ) &amp;&amp; ( MHP_Test_Result__c = &quot;Pass&quot;)) 

|| 
( (MHP_Required__c = &apos;Yes&apos;) &amp;&amp; (MHP_Test_Result__c = &apos;Deferred&apos;) || NOT(MHP_Required__c = &apos;Yes&apos;)))</formula>
        <label>ARC Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ARC_Approval_Status__c</fullName>
        <description>ARC Approval Status</description>
        <label>ARC Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved by Committee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected by Committee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Decision</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ARC_Comments__c</fullName>
        <label>ARC Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Accommodation__c</fullName>
        <label>Religious Accommodation</label>
        <picklist>
            <picklistValues>
                <fullName>Full Accommodation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emergency Contraception Accommodation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Alias__c</fullName>
        <formula>IF(  Opportunity__r.Account.Account_Alias_1__c  != &apos;&apos;, Opportunity__r.Account.Account_Alias_1__c  +&apos;&apos;,&apos;&apos;)+IF( Opportunity__r.Account.Account_Alias_2__c != &apos;&apos;,&apos;,&apos;+ Opportunity__r.Account.Account_Alias_2__c +&apos;&apos;,&apos;&apos;)+IF(  Opportunity__r.Account.Account_Alias_3__c  != &apos;&apos;,&apos;,&apos;+  Opportunity__r.Account.Account_Alias_3__c  ,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Alias</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Full_Address__c</fullName>
        <formula>if(LEN(Account__r.BillingStreet)&gt;0,Account__r.BillingStreet&amp; &quot; &quot; , &quot;&quot; ) &amp; BR() &amp;
if(LEN(Account__r.BillingCity)&gt;0,Account__r.BillingCity&amp; &quot;, &quot; , &quot;&quot; )&amp;
if(LEN(Account__r.BillingState)&gt;0,Account__r.BillingState&amp; &quot; &quot; , &quot;&quot; )&amp;
if(LEN(Account__r.BillingPostalCode)&gt;0,Account__r.BillingPostalCode,&quot;&quot;) &amp; BR() &amp;
If(LEN(Account__r.BillingCountry) &gt;0,Account__r.BillingCountry,&quot;&quot;)</formula>
        <label>Account Full Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Legal_Name__c</fullName>
        <formula>Opportunity__r.Account.Account_Legal_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Legal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <formula>Text(Opportunity__r.Service_Rep__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Website__c</fullName>
        <formula>Account__r.Website</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Website</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Benefit Request Forms</relationshipLabel>
        <relationshipName>Benfit_Request_Forms</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Actual_Member_Count__c</fullName>
        <label>Actual Member Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aggregate_Stop_Loss_Options__c</fullName>
        <label>Aggregate Stop Loss Options</label>
        <picklist>
            <controllingField>Jurisdiction__c</controllingField>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>105%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>110%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>115%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>120%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>125%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>130%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>135%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>140%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>150%</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Alternate_Funding__c</fullName>
        <label>Claims Funding</label>
        <picklist>
            <picklistValues>
                <fullName>Deposit with Monthly Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Set Weekly Wire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly Wire</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Alternate_Networks_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Alternate Networks Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Benefit_Effective_Date__c</fullName>
        <label>Benefit Effective Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Benefit_Period__c</fullName>
        <label>Benefit Period</label>
        <picklist>
            <picklistValues>
                <fullName>Calendar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Broker_Commission__c</fullName>
        <defaultValue>(7/2)/100</defaultValue>
        <label>Broker Commission</label>
        <precision>18</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Broker_Consultant_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Broker/Consultant Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Benfit_Request_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Count__c</fullName>
        <label>Contract Count</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Period__c</fullName>
        <label>Contract Period</label>
        <picklist>
            <picklistValues>
                <fullName>Standard - 12 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Standard</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Count_Dental_Products__c</fullName>
        <description>Count - Dental Proposed Products</description>
        <label>Count of Dental Proposed Products</label>
        <summaryFilterItems>
            <field>Proposed_Products__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Dental</value>
        </summaryFilterItems>
        <summaryForeignKey>Proposed_Products__c.Benefit_Request_Form__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_Drug_Proposed_Products__c</fullName>
        <label>Count of Drug Proposed Products</label>
        <summaryFilterItems>
            <field>Proposed_Products__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Drug</value>
        </summaryFilterItems>
        <summaryForeignKey>Proposed_Products__c.Benefit_Request_Form__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_PP_With_MHP_Fail__c</fullName>
        <description>Count of Proposed Products with MHP Test Result Fail</description>
        <label>Count of Proposed Products with MHP Fail</label>
        <summaryFilterItems>
            <field>Proposed_Products__c.MHP_Test_Result__c</field>
            <operation>equals</operation>
            <value>Fail</value>
        </summaryFilterItems>
        <summaryForeignKey>Proposed_Products__c.Benefit_Request_Form__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_PP_With_MHP_Pass__c</fullName>
        <description>Count of Proposed Products with MHP Pass</description>
        <label>Count of Proposed Products with MHP Pass</label>
        <summaryFilterItems>
            <field>Proposed_Products__c.MHP_Test_Result__c</field>
            <operation>equals</operation>
            <value>Pass</value>
        </summaryFilterItems>
        <summaryForeignKey>Proposed_Products__c.Benefit_Request_Form__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_Vision_Products__c</fullName>
        <description>Vision Proposed Product Count</description>
        <label>Count of Vision Proposed Products</label>
        <summaryFilterItems>
            <field>Proposed_Products__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Vision</value>
        </summaryFilterItems>
        <summaryForeignKey>Proposed_Products__c.Benefit_Request_Form__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_CDH_Products__c</fullName>
        <label>Count of CDH Products</label>
        <summaryFilterItems>
            <field>Proposed_Products__c.CDH__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </summaryFilterItems>
        <summaryForeignKey>Proposed_Products__c.Benefit_Request_Form__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_Custom_Products__c</fullName>
        <description>rollup summary field (Proposed Product where Custom = Yes)</description>
        <label>Count of Custom Products</label>
        <summaryFilterItems>
            <field>Proposed_Products__c.Custom__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Proposed_Products__c.Benefit_Request_Form__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_Medical_Proposed_Products__c</fullName>
        <label>Count of Medical Proposed Products</label>
        <summaryFilterItems>
            <field>Proposed_Products__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Medical</value>
        </summaryFilterItems>
        <summaryForeignKey>Proposed_Products__c.Benefit_Request_Form__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_Proposed_Products_Non_Medical1__c</fullName>
        <label>Count of Proposed Products(Non-Medical)</label>
        <summaryFilterItems>
            <field>Proposed_Products__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Drug, Dental, Vision, CareFirst Private Exchange</value>
        </summaryFilterItems>
        <summaryForeignKey>Proposed_Products__c.Benefit_Request_Form__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_Proposed_Products__c</fullName>
        <label>Count of Proposed Products</label>
        <summaryForeignKey>Proposed_Products__c.Benefit_Request_Form__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_Wellness_Products__c</fullName>
        <label>Count of Wellness Products</label>
        <summaryFilterItems>
            <field>Proposed_Products__c.Wellness__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Proposed_Products__c.Benefit_Request_Form__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Credit_Recommendation__c</fullName>
        <label>Credit Recommendation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credits__c</fullName>
        <label>Requested Credits</label>
        <picklist>
            <picklistValues>
                <fullName>Implementation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wellness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EGWP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EGWP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employer_Contribution_Amount__c</fullName>
        <label>Employer Contribution Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Enrollment_Option__c</fullName>
        <label>Enrollment Option</label>
        <picklist>
            <picklistValues>
                <fullName>eExchange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eConnect Enrollment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eConnect Marketplace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CF Private Exchange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual - Paper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Enrollment_Type__c</fullName>
        <label>Enrollment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Parallel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cafeteria</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Enrollment_Vendor__c</fullName>
        <label>Enrollment Vendor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Escalated_to_Senior_Management__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Escalated to Senior Management</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exclusive_Specialty_Provider_Network__c</fullName>
        <label>Exclusive Specialty Provider Network</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No - Requires Approval</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Exemption__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Religious Exemption</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExtraCare_Health_Care_Card__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ExtraCare Health Care Card</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>File_Net_Doc_Id__c</fullName>
        <label>File Net Doc Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FlexLink__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FlexLink</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Formulary__c</fullName>
        <label>Formulary</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Funding_Arrangements__c</fullName>
        <label>Funding Arrangements</label>
        <picklist>
            <picklistValues>
                <fullName>ASO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Generic_Step_Therapy__c</fullName>
        <label>Generic Step Therapy</label>
        <picklist>
            <picklistValues>
                <fullName>Dummy1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dummy2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dummy3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dummy4</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Grandfathered_PPACA_Status__c</fullName>
        <label>Grandfathered PPACA Status</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mixed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Grandfathered_Status__c</fullName>
        <label>Grandfathered Status</label>
        <picklist>
            <picklistValues>
                <fullName>Grandfathered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Grandfathered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mixed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Headquarters_Address__c</fullName>
        <formula>Opportunity__r.Account.BillingStreet  + &quot; &quot; +   Opportunity__r.Account.BillingCity  + &quot; &quot; +  Opportunity__r.Account.BillingCountry  + &quot; &quot; +  Opportunity__r.Account.BillingState  + &quot; &quot; +  Opportunity__r.Account.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Headquarters Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Headquarters_County__c</fullName>
        <formula>Opportunity__r.Account.Billing_County__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Headquarters County</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jurisdiction__c</fullName>
        <label>Jurisdiction</label>
        <picklist>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other - Cede Required</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MHP_Required__c</fullName>
        <formula>IF (Count_of_Proposed_Products__c  =  0 , &apos;&apos; ,
IF (Count_of_Medical_Proposed_Products__c   &gt;=  1 , &apos;Yes&apos; , 
IF (Count_of_Medical_Proposed_Products__c   =  0 , &apos;No&apos; , NULL)))</formula>
        <label>MHP Required</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MHP_Test_Result__c</fullName>
        <label>MHP Test Result</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Maintenance_Choice__c</fullName>
        <label>Maintenance Choice</label>
        <picklist>
            <picklistValues>
                <fullName>Mandatory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voluntary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Non_Preferred_Stop_Loss_Carrier__c</fullName>
        <label>Non-Preferred Stop Loss Carrier</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Months_for_Contract_Period__c</fullName>
        <label>Number of Months for Contract Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Enrollment_End_Date__c</fullName>
        <label>Open Enrollment End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Open_Enrollment_Meeting_End_Date__c</fullName>
        <label>Open Enrollment Meeting End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Open_Enrollment_Meeting_Start_Date__c</fullName>
        <label>Open Enrollment Meeting Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Open_Enrollment_Start_Date__c</fullName>
        <label>Open Enrollment Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Type__c</fullName>
        <formula>TEXT(Opportunity__r.Business_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Benefit Request Forms</relationshipLabel>
        <relationshipName>Benfit_Request_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Enrollment_Option__c</fullName>
        <label>Other Enrollment Option</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Funding_Arrangements__c</fullName>
        <label>Other Funding Arrangements</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <formula>Account__r.OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRF__c</fullName>
        <formula>Proposal_Request_Form__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PRF</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Performance_Guarantee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Performance Guarantee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Proposal_Request_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Proposal Request Form</label>
        <referenceTo>PRF__c</referenceTo>
        <relationshipLabel>Benefit Request Forms</relationshipLabel>
        <relationshipName>Benefit_Request_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RFP_Request__c</fullName>
        <formula>IF(ISBLANK( Proposal_Request_Form__c ) , &quot;No&quot;, &quot;Yes&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RFP Request</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RFP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RFP</label>
        <referenceTo>RFP__c</referenceTo>
        <relationshipName>Benfit_Request_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RX_Rebates__c</fullName>
        <inlineHelpText>50% Requires Management Approval. 100% Requires Senior Management Approval.</inlineHelpText>
        <label>RX Rebates</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rebates_Withheld_by_CareFirst__c</fullName>
        <label>Rebates Withheld by CareFirst</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50% (Requires Management Approval)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100% (Requires Senior Management Approval)</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Renewal_Date__c</fullName>
        <label>Next Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Request_Cede_Document__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Request Cede Document</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <picklist>
            <picklistValues>
                <fullName>Prospect/New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off-Cycle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFP</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rider_Comments__c</fullName>
        <label>Rider Comments</label>
        <length>54</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rider__c</fullName>
        <label>Rider</label>
        <picklist>
            <controllingField>Jurisdiction__c</controllingField>
            <picklistValues>
                <fullName>Infertility Services Coverage Rider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Planning Benefits Exclusion Rider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hearing Aid Rider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Morbid Obesity Surgery Benefit Amendment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acupuncture Rider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alzheimer&apos;s Disease Benefits Rider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Care of Elderly Individuals Benefits Rider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gonorrhea Screening Rider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repatriation of Remains Rider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travels Expense for Serious Illness or Injury Rider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group Incentive Program Rider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vision Care Rider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prescription Drug Benefits Rider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domestic Partner Rider</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Sales_Consultant_Account_Manager__c</fullName>
        <formula>TEXT(Opportunity__r.Lead_Rep_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Consultant / Account Executive</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Email__c</fullName>
        <label>Sales Rep Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Sales_Segment_Size__c</fullName>
        <label>Sales Segment Size</label>
        <picklist>
            <picklistValues>
                <fullName>Commercial 200-999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial 1,000+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Labor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Municipal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Business</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Send_1st_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send 1st Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_to_Actuarial_Team__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send to Actuarial Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Senior_Management_Approved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Senior Management Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Benefit_Request_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>